--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <nav class="nav-main">
             <a href="index.html">
-                <img src="img/img-aire-ico.png" alt="Aires Minio" class="nav-brand">
+                <img src="/img-aire-ico.png" alt="Aires Minio" class="nav-brand">
             </a>
 
             <ul class="nav-menu">
@@ -188,4 +188,5 @@
     <!--CUSTOM JS-->
     <script src="main.js"></script>
 </body>
+
 </html>
