--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <nav class="nav-main">
             <a href="index.html">
-                <img src="img/img-aire-ico.png" alt="Aires Minio" class="nav-brand">
+                <img src="/img/img-aire-ico.png" alt="Aires Minio" class="nav-brand">
             </a>
 
             <ul class="nav-menu">
@@ -64,25 +64,25 @@
         <!--NEWS CARDS-->
         <div class="news-cards">
             <div>
-                <img src="img/img-aire.jpg" alt="img 1">
+                <img src="/img/img-aire.jpg" alt="img 1">
                 <h3>Lorem, ipsum dolor.</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, atque.</p>
                 <a href="">learn more <i class="fas fa-angle-double-right"></i></a>
             </div>
             <div>
-                <img src="img/img-aire6.jpeg" alt="img 2">
+                <img src="/img/img-aire6.jpeg" alt="img 2">
                 <h3>Lorem, ipsum dolor.</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, atque.</p>
                 <a href="">learn more <i class="fas fa-angle-double-right"></i></a>
             </div>
             <div>
-                <img src="img/img-aire5.jpeg" alt="img 3">
+                <img src="/img/img-aire5.jpeg" alt="img 3">
                 <h3>Lorem, ipsum dolor.</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, atque.</p>
                 <a href="">learn more <i class="fas fa-angle-double-right"></i></a>
             </div> 
             <div>
-                <img src="img/img-aire2.jpg" alt="img 4">
+                <img src="/img/img-aire2.jpg" alt="img 4">
                 <h3>Lorem, ipsum dolor.</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, atque.</p>
                 <a href="">learn more <i class="fas fa-angle-double-right"></i></a>
@@ -190,6 +190,7 @@
 </body>
 
 </html>
+
 
 
 
