--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <nav class="nav-main">
             <a href="index.html">
-                <img src="img/img-aire-ico.png" alt="Aires Minio" class="nav-brand">
+                <img src="/img/img-aire-ico.png" alt="Aires Minio" class="nav-brand">
             </a>
 
             <ul class="nav-menu">
@@ -190,6 +190,7 @@
 </body>
 
 </html>
+
 
 
 
