--- a/venta-equipos.html
+++ b/venta-equipos.html
@@ -29,7 +29,7 @@
     <!-- NAV -->
     <nav class="nav-main">
       <a href="index.html">
-        <img src="/img/img-aire-ico.png" alt="Aires Minio" class="nav-brand">
+        <img src="img/img-aire-ico.png" alt="Aires Minio" class="nav-brand">
       </a>
 
       <ul class="nav-menu">
@@ -67,28 +67,28 @@
     <!-- NEWS CARDS -->
     <div class="news-cards">
       <div>
-        <img src="/img/img-aire.jpg" alt="equipo 1">
+        <img src="img/img-aire.jpg" alt="equipo 1">
         <h3>Aire Split 3000 Frigorías</h3>
         <p>Eficiencia energética y alto rendimiento.</p>
         <a href="#">Consultar <i class="fas fa-angle-double-right"></i></a>
       </div>
 
       <div>
-        <img src="/img/img-aire6.jpeg" alt="equipo 2">
+        <img src="img/img-aire6.jpeg" alt="equipo 2">
         <h3>Aire Inverter</h3>
         <p>Menor consumo y máxima potencia.</p>
         <a href="#">Consultar <i class="fas fa-angle-double-right"></i></a>
       </div>
 
       <div>
-        <img src="/img/img-aire5.jpeg" alt="equipo 3">
+        <img src="img/img-aire5.jpeg" alt="equipo 3">
         <h3>Aire Portátil</h3>
         <p>Ideal para espacios reducidos.</p>
         <a href="#">Consultar <i class="fas fa-angle-double-right"></i></a>
       </div>
 
       <div>
-        <img src="/img/img-aire2.jpg" alt="equipo 4">
+        <img src="img/img-aire2.jpg" alt="equipo 4">
         <h3>Aire Piso Techo</h3>
         <p>Solución profesional para grandes ambientes.</p>
         <a href="#">Consultar <i class="fas fa-angle-double-right"></i></a>
@@ -96,28 +96,28 @@
     </div>
     <div class="news-cards">
       <div>
-        <img src="/img/img-aire.jpg" alt="equipo 1">
+        <img src="img/img-aire.jpg" alt="equipo 1">
         <h3>Aire Split 3000 Frigorías</h3>
         <p>Eficiencia energética y alto rendimiento.</p>
         <a href="#">Consultar <i class="fas fa-angle-double-right"></i></a>
       </div>
 
       <div>
-        <img src="/img/img-aire6.jpeg" alt="equipo 2">
+        <img src="img/img-aire6.jpeg" alt="equipo 2">
         <h3>Aire Inverter</h3>
         <p>Menor consumo y máxima potencia.</p>
         <a href="#">Consultar <i class="fas fa-angle-double-right"></i></a>
       </div>
 
       <div>
-        <img src="/img/img-aire5.jpeg" alt="equipo 3">
+        <img src="img/img-aire5.jpeg" alt="equipo 3">
         <h3>Aire Portátil</h3>
         <p>Ideal para espacios reducidos.</p>
         <a href="#">Consultar <i class="fas fa-angle-double-right"></i></a>
       </div>
 
       <div>
-        <img src="/img/img-aire2.jpg" alt="equipo 4">
+        <img src="img/img-aire2.jpg" alt="equipo 4">
         <h3>Aire Piso Techo</h3>
         <p>Solución profesional para grandes ambientes.</p>
         <a href="#">Consultar <i class="fas fa-angle-double-right"></i></a>
@@ -184,4 +184,5 @@
 
 </body>
 </html>
+
 
