--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <a href="">learn more <i class="fas fa-angle-double-right"></i></a>
             </div> 
             <div>
-                <img src="img-aire2.jpg" alt="img 4">
+                <img src="img/img-aire2.jpg" alt="img 4">
                 <h3>Lorem, ipsum dolor.</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, atque.</p>
                 <a href="">learn more <i class="fas fa-angle-double-right"></i></a>
@@ -190,6 +190,7 @@
 </body>
 
 </html>
+
 
 
 
